--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ h1{
     font-weight: 400;
     font-size: 96px;
     line-height: 113.09px;
-    color: #fff;
+    color: #red;
     
 }
 .undermittnamn {
